# pattern-viewer

./: CMakeLists.txt  README.md
include/: common_header.h  db_test.h  my_collapse.h
src/: main.cpp
src/UI/: controlpad.cpp  controlpad.h  expandvar.cpp  expandvar.h  renderarea.cpp  renderarea.h  window.cpp  window.h
